--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,3 +1,7 @@
 <div class="container">
-    <h1 class="text-center">Home</h1>
+    <h1 class="text-center">Latest News</h1>
+
+    <div>
+        <pre>{{news | json}}</pre>
+    </div>
 </div>
