--- a/public/views/index.html
+++ b/public/views/index.html
@@ -32,10 +32,12 @@
 <!-- Scripts -->
 <script src="https://code.jquery.com/jquery-1.11.2.js"></script>
 <script src="/scripts/bootstrap/dist/js/bootstrap.js"></script>
-<script src="/scripts/angular/angular.min.js"></script>
-<script src="/scripts/angular-route/angular-route.min.js" type="text/javascript"></script>
+<script src="/scripts/angular/angular.js"></script>
+<script src="/scripts/angular-route/angular-route.js" type="text/javascript"></script>
 <script src="/scripts/angular-loading-bar/build/loading-bar.min.js"></script>
 <script src="/js/application.js"></script>
+<script src="/js/services/news-services.js"></script>
+<script src="/js/controllers/home-controller.js"></script>
 
 </body>
 </html>
