Implemented api to get latest news list page.

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,7 +1,18 @@
 <div class="container">
-    <h1 class="text-center">Latest News</h1>
+    <h1 class="page-header">XBA API's</h1>
 
-    <div>
-        <pre>{{news | json}}</pre>
-    </div>
+    <table class="table table-bordered table-striped">
+        <tr>
+            <td>
+                API
+            </td>
+            <td colspan="4">
+                Description
+            </td>
+        </tr>
+        <tr>
+            <td><a href="/news">Latest News</a></td>
+            <td colspan="4" style="font-style: italic">Get Latest News</td>
+        </tr>
+    </table>
 </div>
