Added news details (Missing Comments & Content newline breaks).

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -11,8 +11,12 @@
             </td>
         </tr>
         <tr>
-            <td><a href="/news">Latest News</a></td>
+            <td><a href="/latestnews">Latest News</a></td>
             <td colspan="4" style="font-style: italic">Get Latest News</td>
+        </tr>
+        <tr>
+            <td><a href="/news">News</a></td>
+            <td colspan="4" style="font-style: italic">News Details</td>
         </tr>
     </table>
 </div>
