--- a/public/views/index.html
+++ b/public/views/index.html
@@ -39,6 +39,7 @@
 <script src="/js/services/news-services.js"></script>
 <script src="/js/controllers/home-controller.js"></script>
 <script src="/js/controllers/latest-news-controller.js"></script>
+<script src="/js/controllers/news-controller.js"></script>
 
 </body>
 </html>
