Added Latest Achievements.

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -18,5 +18,9 @@
             <td><a href="/news">News</a></td>
             <td colspan="4" style="font-style: italic">News Details</td>
         </tr>
+        <tr>
+            <td><a href="/latestachievements">Latest Achievements</a></td>
+            <td colspan="4" style="font-style: italic">Get Latest Achievements</td>
+        </tr>
     </table>
 </div>
