Added Game Achievements

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -22,5 +22,9 @@
             <td><a href="/latestachievements">Latest Achievements</a></td>
             <td colspan="4" style="font-style: italic">Get Latest Achievements</td>
         </tr>
+        <tr>
+            <td><a href="/achievements">Game Achievements</a></td>
+            <td colspan="4" style="font-style: italic">Get Game Achievements</td>
+        </tr>
     </table>
 </div>
