--- a/public/views/latest-news.html
+++ b/public/views/latest-news.html
@@ -3,7 +3,7 @@
 
     <table class="table table-striped table-bordered">
         <tr>
-            <td colspan="4"><strong>URL Endpoint: /api/latestnews</strong></td>
+            <td colspan="4"><strong>URL Endpoint: /api/latest/news</strong></td>
         </tr>
         <tr>
             <td colspan="4">
@@ -21,7 +21,7 @@
     </table>
 
     <h3 class="page-header">Example</h3>
-    <p><strong>Endpoint: </strong>/api/latestnews?page={{pageNumber}}</p>
+    <p><strong>Endpoint: </strong>/api/latest/news?page={{pageNumber}}</p>
     <p><strong>Total news: </strong>{{ news.length }}</p>
     <input style="max-width: 140px; display: inline; margin-bottom: 10px;" class="form-control" type="number" placeholder="1" ng-model="pageNumber" min="1"/>
     <button class="btn btn-default" ng-click="getNews()">Submit</button>
