Added some style and fixed news api.

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -4,10 +4,10 @@
     <table class="table table-bordered table-striped">
         <tr>
             <td>
-                API
+                <span class="text-bold">API</span>
             </td>
             <td colspan="4">
-                Description
+                <span class="text-bold">Description</span>
             </td>
         </tr>
         <tr>
@@ -23,8 +23,8 @@
             <td colspan="4" style="font-style: italic">Get Latest Achievements</td>
         </tr>
         <tr>
-            <td><a href="/achievements">Game Achievements</a></td>
-            <td colspan="4" style="font-style: italic">Get Game Achievements</td>
+            <td><a href="/games">Games</a></td>
+            <td colspan="4" style="font-style: italic">Get Game Info</td>
         </tr>
     </table>
 </div>
