--- a/public/views/achievements-partial.html
+++ b/public/views/achievements-partial.html
@@ -1,5 +1,4 @@
 <div class="container">
-    <h1 class="page-header">Game Achievements</h1>
 
     <table class="table table-striped table-bordered">
         <tr>
@@ -8,7 +7,7 @@
         <tr>
             <td colspan="4">
                 <strong>Description: </strong>
-                Get Game Achievements List
+                Get Game Data
             </td>
         </tr>
     </table>
