--- a/public/views/index.html
+++ b/public/views/index.html
@@ -9,10 +9,12 @@
 
     <title>XBA API's</title>
 
-    <link rel="stylesheet" href="/scripts/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="/scripts/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.css">
     <link rel="stylesheet" href="/css/animate.css"/>
     <link rel="stylesheet" href="/scripts/angular-loading-bar/build/loading-bar.css"/>
+    <link rel="stylesheet" href="/css/style.css"/>
+
     <style>
         [ng\:cloak],
         [ng-cloak],
@@ -31,15 +33,16 @@
 
 <!-- Scripts -->
 <script src="https://code.jquery.com/jquery-1.11.2.js"></script>
-<script src="/scripts/bootstrap/dist/js/bootstrap.js"></script>
-<script src="/scripts/angular/angular.js"></script>
-<script src="/scripts/angular-route/angular-route.js" type="text/javascript"></script>
+<script src="/scripts/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/scripts/angular/angular.min.js"></script>
+<script src="/scripts/angular-route/angular-route.min.js" type="text/javascript"></script>
 <script src="/scripts/angular-loading-bar/build/loading-bar.min.js"></script>
+<script src="/scripts/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <script src="/js/application.js"></script>
 <script src="/js/services/api-services.js"></script>
 <script src="/js/controllers/home-controller.js"></script>
 <script src="/js/controllers/news-controller.js"></script>
-<script src="/js/controllers/achievements-controller.js"></script>
+<script src="/js/controllers/games-controller.js"></script>
 
 </body>
 </html>
