--- a/public/views/news.html
+++ b/public/views/news.html
@@ -3,18 +3,17 @@
 
     <table class="table table-striped table-bordered">
         <tr>
-            <td colspan="4"><strong>URL Endpoint: /api/news/{permalink}</strong></td>
+            <td colspan="4"><span class="text-bold">URL Endpoint: </span><span class="endpoint-text">/api/news/</span><span class="endpoint-text-options">{permalink}</span></td>
         </tr>
         <tr>
             <td colspan="4">
-                <strong>Description: </strong>
                 Get news details
             </td>
         </tr>
     </table>
 
     <h3 class="page-header">Example</h3>
-    <p><strong>Endpoint: </strong>/api/news/{{selectedNews.permalink}}</p>
+    <p><span class="text-bold">Endpoint: </span><span class="endpoint-text">/api/news/</span><span class="endpoint-text-options">{{selectedNews.permalink}}</span></p>
     <select style="max-width: 140px; margin-bottom: 10px;" class="form-control" ng-options="item as item.title for item in news" ng-model="selectedNews" ng-change="update()">
     </select>
     <pre>{{ newsDetails | json }}</pre>
