--- a/public/views/achievements-partial.html
+++ b/public/views/achievements-partial.html
@@ -1,20 +1,19 @@
-<div class="container">
+<div class="container" ng-controller="GamesController">
 
     <table class="table table-striped table-bordered">
         <tr>
-            <td colspan="4"><strong>URL Endpoint: /api/game/achievements/{permalink}</strong></td>
+            <td colspan="4"><span class="text-bold">URL Endpoint: </span><span class="endpoint-text">/api/game/achievements/</span><span class="endpoint-text-options">{permalink}</span></td>
         </tr>
         <tr>
             <td colspan="4">
-                <strong>Description: </strong>
                 Get Game Data
             </td>
         </tr>
     </table>
 
     <h3 class="page-header">Example</h3>
-    <p><strong>Endpoint: </strong>/api/game/achievements/{{selectedGame.permalink}}</p>
-    <p><strong>Total Achievements: </strong>{{details.length}}</p>
+    <p><span class="text-bold">Endpoint: </span><span class="endpoint-text">/api/game/achievements/</span><span class="endpoint-text-options">{{selectedGame.permalink}}</span></p>
+    <p><span class="text-bold">Total Achievements: </span><span class="text-primary">{{details.length}}</span></p>
     <select style="max-width: 140px; margin-bottom: 10px;" class="form-control" ng-options="item as item.title for item in achievements" ng-model="selectedGame" ng-change="update()">
     </select>
     <pre>{{ details | json }}</pre>
