--- a/public/css/style.less
+++ b/public/css/style.less
@@ -23,4 +23,14 @@ body {
   .text-primary {
     color: #e74c3c;
   }
+
+  .tab-content {
+    border: 1px solid #ddd;
+    padding: 10px;
+    margin-bottom: 20px;
+  }
+
+  .nav-tabs {
+    margin-bottom: -1px;
+  }
 }
