--- a/public/views/achievements-partial.html
+++ b/public/views/achievements-partial.html
@@ -1,15 +1,17 @@
-<div class="container" ng-controller="GamesController">
+<div ng-controller="AchievementsController">
 
-    <table class="table table-striped table-bordered">
-        <tr>
-            <td colspan="4"><span class="text-bold">URL Endpoint: </span><span class="endpoint-text">/api/game/achievements/</span><span class="endpoint-text-options">{permalink}</span></td>
-        </tr>
-        <tr>
-            <td colspan="4">
-                Get Game Data
-            </td>
-        </tr>
-    </table>
+    <div class="table-responsive">
+        <table class="table table-striped table-bordered">
+            <tr>
+                <td colspan="4"><span class="text-bold">URL Endpoint: </span><span class="endpoint-text">/api/game/achievements/</span><span class="endpoint-text-options">{permalink}</span></td>
+            </tr>
+            <tr>
+                <td colspan="4">
+                    Get Game Data
+                </td>
+            </tr>
+        </table>
+    </div>
 
     <h3 class="page-header">Example</h3>
     <p><span class="text-bold">Endpoint: </span><span class="endpoint-text">/api/game/achievements/</span><span class="endpoint-text-options">{{selectedGame.permalink}}</span></p>
