--- a/public/views/games.html
+++ b/public/views/games.html
@@ -5,7 +5,9 @@
         <uib-tab heading="Achievements" select="getAchievements()">
             <div ng-include="tabAchievementsTemplate"></div>
         </uib-tab>
-        <uib-tab heading="Static title">Static b</uib-tab>
+        <uib-tab heading="Screenshots" select="getScreenshots()">
+            <div ng-include="tabScreenshotsTemplate"></div>
+        </uib-tab>
     </uib-tabset>
 
 </div>
