--- a/public/views/screenshots-partial.html
+++ b/public/views/screenshots-partial.html
@@ -1,5 +1,4 @@
-<div ng-controller="ScreenshotsController">
-
+<div>
     <div class="table-responsive">
         <table class="table table-striped table-bordered">
             <tr>
@@ -15,8 +14,7 @@
 
     <h3 class="page-header">Example</h3>
     <p><span class="text-bold">Endpoint: </span><span class="endpoint-text">/api/game/screenshots/</span><span class="endpoint-text-options">{{selectedGame.permalink}}</span></p>
-    <p><span class="text-bold">Total screenshots: </span><span class="text-primary">{{details.length}}</span></p>
-    <select style="max-width: 140px; margin-bottom: 10px;" class="form-control" ng-options="item as item.title for item in achievements" ng-model="selectedGame" ng-change="getScreenshots()">
+    <p><span class="text-bold">Total screenshots: </span><span class="text-primary">{{screenshots.length}}</span></p>
     </select>
-    <pre>{{ details | json }}</pre>
+    <pre>{{ screenshots | json }}</pre>
 </div>
