--- a/public/views/achievements-partial.html
+++ b/public/views/achievements-partial.html
@@ -6,7 +6,7 @@
             </tr>
             <tr>
                 <td colspan="4">
-                    Get Game Data
+                    Get Game Achievements
                 </td>
             </tr>
         </table>
