--- a/public/views/games.html
+++ b/public/views/games.html
@@ -1,10 +1,10 @@
 <div class="container">
     <h1 class="page-header">Games</h1>
 
-    <select style="max-width: 140px; margin-bottom: 10px;" class="form-control" ng-options="item as item.title for item in games" ng-model="selectedGame" ng-change="update()"></select>
+    <select style="max-width: 140px; margin-bottom: 10px;" class="form-control" ng-options="item as item.title for item in games" ng-model="selectedGame" ng-change="update(currentId)"></select>
 
     <uib-tabset  justified="true">
-        <uib-tab heading="{{tab.title}}" ng-repeat="tab in tabs" select="update(tab[$index])">
+        <uib-tab heading="{{tab.title}}" ng-repeat="tab in tabs" select="update(tab.id)">
             <div ng-include="tab.templateUrl"></div>
         </uib-tab>
     </uib-tabset>
