--- a/public/views/screenshots-partial.html
+++ b/public/views/screenshots-partial.html
@@ -13,8 +13,10 @@
     </div>
 
     <h3 class="page-header">Example</h3>
-    <p><span class="text-bold">Endpoint: </span><span class="endpoint-text">/api/game/screenshots/</span><span class="endpoint-text-options">{{selectedGame.permalink}}</span></p>
+    <p><span class="text-bold">Endpoint: </span><span class="endpoint-text">/api/game/screenshots/</span><span class="endpoint-text-options">{{selectedGame.permalink}}?page={{pageNumber}}</span></p>
     <p><span class="text-bold">Total screenshots: </span><span class="text-primary">{{screenshots.length}}</span></p>
+    <input style="max-width: 140px; display: inline; margin-bottom: 10px;" class="form-control" type="number" placeholder="1" ng-model="pageNumber" min="1"/>
+    <button class="btn btn-default" ng-click="update()">Submit</button>
     </select>
     <pre>{{ screenshots | json }}</pre>
 </div>
