--- a/public/views/latest-achievements.html
+++ b/public/views/latest-achievements.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" ng-controller="LatestAchievementsController as vm">
     <h1 class="page-header">Latest Achievements</h1>
 
     <table class="table table-striped table-bordered">
@@ -20,9 +20,9 @@
     </table>
 
     <h3 class="page-header">Example</h3>
-    <p><span class="text-bold">Endpoint: </span><span class="endpoint-text">/api/latest/achievements</span><span class="endpoint-text-options">?page={{pageNumber}}</span></p>
-    <p><span class="text-bold">Total Latest Achievements: </span><span class="text-primary">{{ achievements.length }}</span></p>
-    <input style="max-width: 140px; display: inline; margin-bottom: 10px;" class="form-control" type="number" placeholder="1" ng-model="pageNumber" min="1"/>
-    <button class="btn btn-default" ng-click="getLatestAchievements()">Submit</button>
-    <pre>{{ achievements | json }}</pre>
+    <p><span class="text-bold">Endpoint: </span><span class="endpoint-text">/api/latest/achievements</span><span class="endpoint-text-options">?page={{vm.pageNumber}}</span></p>
+    <p><span class="text-bold">Total Latest Achievements: </span><span class="text-primary">{{ vm.achievements.length }}</span></p>
+    <input style="max-width: 140px; display: inline; margin-bottom: 10px;" class="form-control" type="number" placeholder="1" ng-model="vm.pageNumber" min="1"/>
+    <button class="btn btn-default" ng-click="vm.getLatestAchievements()">Submit</button>
+    <pre>{{ vm.achievements | json }}</pre>
 </div>
