--- a/public/views/news.html
+++ b/public/views/news.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" ng-controller="NewsController as vm">
     <h1 class="page-header">News Details</h1>
 
     <table class="table table-striped table-bordered">
@@ -13,8 +13,8 @@
     </table>
 
     <h3 class="page-header">Example</h3>
-    <p><span class="text-bold">Endpoint: </span><span class="endpoint-text">/api/news/</span><span class="endpoint-text-options">{{selectedNews.permalink}}</span></p>
-    <select style="max-width: 140px; margin-bottom: 10px;" class="form-control" ng-options="item as item.title for item in news" ng-model="selectedNews" ng-change="update()">
+    <p><span class="text-bold">Endpoint: </span><span class="endpoint-text">/api/news/</span><span class="endpoint-text-options">{{vm.selectedNews.permalink}}</span></p>
+    <select style="max-width: 140px; margin-bottom: 10px;" class="form-control" ng-options="item as item.title for item in vm.news" ng-model="vm.selectedNews" ng-change="vm.update()">
     </select>
-    <pre>{{ newsDetails | json }}</pre>
+    <pre>{{ vm.newsDetails | json }}</pre>
 </div>
