Added Controller AS Syntax to All Controllers & Views

--- a/public/views/achievements-partial.html
+++ b/public/views/achievements-partial.html
@@ -12,9 +12,11 @@
         </table>
     </div>
 
-    <h3 class="page-header">Example</h3>
-    <p><span class="text-bold">Endpoint: </span><span class="endpoint-text">/api/game/achievements/</span><span class="endpoint-text-options">{{selectedGame.permalink}}</span></p>
-    <p><span class="text-bold">Total Achievements: </span><span class="text-primary">{{achievements.length}}</span></p>
-    </select>
-    <pre>{{ achievements | json }}</pre>
+    <div ng-if="vm.selectedGame">
+        <h3 class="page-header">Example</h3>
+        <p><span class="text-bold">Endpoint: </span><span class="endpoint-text">/api/game/achievements/</span><span class="endpoint-text-options">{{vm.selectedGame.permalink}}</span></p>
+        <p><span class="text-bold">Total Achievements: </span><span class="text-primary">{{vm.achievements.length}}</span></p>
+        </select>
+        <pre>{{ vm.achievements | json }}</pre>
+    </div>
 </div>
