--- a/public/views/game-info-partial.html
+++ b/public/views/game-info-partial.html
@@ -12,8 +12,10 @@
         </table>
     </div>
 
-    <h3 class="page-header">Example</h3>
-    <p><span class="text-bold">Endpoint: </span><span class="endpoint-text">/api/game/info/</span><span class="endpoint-text-options">{{selectedGame.permalink}}</span></p>
-    </select>
-    <pre>{{ gameInfo | json }}</pre>
+    <div ng-if="vm.selectedGame">
+        <h3 class="page-header">Example</h3>
+        <p><span class="text-bold">Endpoint: </span><span class="endpoint-text">/api/game/info/</span><span class="endpoint-text-options">{{vm.selectedGame.permalink}}</span></p>
+        </select>
+        <pre>{{ vm.gameInfo | json }}</pre>
+    </div>
 </div>
