--- a/public/views/games.html
+++ b/public/views/games.html
@@ -1,10 +1,12 @@
-<div class="container">
+<div class="container" ng-controller="GamesController as vm">
     <h1 class="page-header">Games</h1>
 
-    <select style="max-width: 140px; margin-bottom: 10px;" class="form-control" ng-options="item as item.title for item in games" ng-model="selectedGame" ng-change="update(currentId)"></select>
+    <select style="max-width: 140px; margin-bottom: 10px;" class="form-control" ng-options="item as item.title for item in vm.games" ng-model="vm.selectedGame" ng-change="vm.update(vm.currentId)">
+        <option value="">-- Select Game --</option>
+    </select>
 
     <uib-tabset  justified="true">
-        <uib-tab heading="{{tab.title}}" ng-repeat="tab in tabs" select="update(tab.id)">
+        <uib-tab heading="{{tab.title}}" ng-repeat="tab in vm.tabs" select="vm.update(tab.id)" disable="!vm.selectedGame">
             <div ng-include="tab.templateUrl"></div>
         </uib-tab>
     </uib-tabset>
