Make the select tag for games full width

--- a/public/views/games.html
+++ b/public/views/games.html
@@ -1,7 +1,7 @@
 <div class="container" ng-controller="GamesController as vm">
     <h1 class="page-header">Games</h1>
 
-    <select style="max-width: 140px; margin-bottom: 10px;" class="form-control" ng-options="item as item.title for item in vm.games" ng-model="vm.selectedGame" ng-change="vm.update(vm.currentId)">
+    <select style="margin-bottom: 10px;" class="form-control" ng-options="item as item.title for item in vm.games" ng-model="vm.selectedGame" ng-change="vm.update(vm.currentId)">
         <option value="">-- Select Game --</option>
     </select>
 
