--- a/public/views/news.html
+++ b/public/views/news.html
@@ -14,7 +14,7 @@
 
     <h3 class="page-header">Example</h3>
     <p><span class="text-bold">Endpoint: </span><span class="endpoint-text">/api/news/</span><span class="endpoint-text-options">{{vm.selectedNews.permalink}}</span></p>
-    <select style="max-width: 140px; margin-bottom: 10px;" class="form-control" ng-options="item as item.title for item in vm.news" ng-model="vm.selectedNews" ng-change="vm.update()">
+    <select style="margin-bottom: 10px;" class="form-control" ng-options="item as item.title for item in vm.news" ng-model="vm.selectedNews" ng-change="vm.update()">
     </select>
     <pre>{{ vm.newsDetails | json }}</pre>
 </div>
