Added ng animate module

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -29,17 +29,19 @@
 
 <body ng-cloak>
 
-<div ng-view></div>
+<div id="ng-view-main" ng-view></div>
 
 <!-- Scripts -->
 <script src="https://code.jquery.com/jquery-1.11.2.js"></script>
 <script src="/scripts/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="/scripts/angular/angular.min.js"></script>
 <script src="/scripts/angular-route/angular-route.min.js" type="text/javascript"></script>
+<script src="/scripts/angular-animate/angular-animate.min.js" type="text/javascript"></script>
 <script src="/scripts/angular-loading-bar/build/loading-bar.min.js"></script>
 <script src="/scripts/angular-ui-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <script src="/js/application.js"></script>
 <script src="/js/services/api-services.js"></script>
+<script src="/js/controllers/home-controller.js"></script>
 <script src="/js/controllers/news-controller.js"></script>
 <script src="/js/controllers/games-controller.js"></script>
 
