--- a/public/views/screenshots-partial.html
+++ b/public/views/screenshots-partial.html
@@ -2,19 +2,30 @@
     <div class="table-responsive">
         <table class="table table-striped table-bordered">
             <tr>
-                <td colspan="4"><span class="text-bold">URL Endpoint: </span><span class="endpoint-text">/api/game/screenshots/</span><span class="endpoint-text-options">{permalink}?page={pageNumber}</span></td>
+                <td colspan="4"><span class="text-bold">URL Endpoint: </span><span class="endpoint-text">/api/game/screenshots</span><span class="endpoint-text-options">?game={permalink}&page={pageNumber}</span></td>
             </tr>
             <tr>
                 <td colspan="4">
                     Get Game Screenshots. 12 per page
                 </td>
             </tr>
+            <tr>
+                <td colspan="4"><span class="text-bold">Queries</span></td>
+            </tr>
+            <tr>
+                <td>Game (Required)</td>
+                <td>Game Permalink</td>
+            </tr>
+            <tr>
+                <td>Page</td>
+                <td>Page Number</td>
+            </tr>
         </table>
     </div>
 
     <div ng-if="vm.selectedGame">
         <h3 class="page-header">Example</h3>
-        <p><span class="text-bold">Endpoint: </span><span class="endpoint-text">/api/game/screenshots/</span><span class="endpoint-text-options">{{vm.selectedGame.permalink}}?page={{vm.screenshotsPageNumber}}</span></p>
+        <p><span class="text-bold">Endpoint: </span><span class="endpoint-text">/api/game/screenshots</span><span class="endpoint-text-options">?game={{vm.selectedGame.permalink}}&page={{vm.screenshotsPageNumber}}</span></p>
         <p><span class="text-bold">Total screenshots: </span><span class="text-primary">{{vm.screenshots.length}}</span></p>
         <input style="max-width: 140px; display: inline; margin-bottom: 10px;" class="form-control" type="number" placeholder="1" ng-model="vm.screenshotsPageNumber" min="1"/>
         <button class="btn btn-default" ng-click="vm.update(vm.currentId)">Submit</button>
