Added query documentation for AAchievement Comments

--- a/public/views/ach-comments-partial.html
+++ b/public/views/ach-comments-partial.html
@@ -9,6 +9,17 @@
                     Get Game Achievement Comments
                 </td>
             </tr>
+            <tr>
+                <td colspan="4"><span class="text-bold">Queries</span></td>
+            </tr>
+            <tr>
+                <td>Game (Required)</td>
+                <td>Game Permalink</td>
+            </tr>
+            <tr>
+                <td>Achievement (Required)</td>
+                <td>Achievement Permalink</td>
+            </tr>
         </table>
     </div>
 
