--- a/public/views/home.html
+++ b/public/views/home.html
@@ -23,7 +23,11 @@
             <td colspan="4" style="font-style: italic">Get Latest Achievements</td>
         </tr>
         <tr>
-            <td><a href="/games">Games</a></td>
+            <td><a href="/games">Games List</a></td>
+            <td colspan="4" style="font-style: italic">Get Game List</td>
+        </tr>
+        <tr>
+            <td><a href="/game">Game</a></td>
             <td colspan="4" style="font-style: italic">Get Game Info</td>
         </tr>
     </table>
