--- a/public/views/game-info-partial.html
+++ b/public/views/game-info-partial.html
@@ -2,7 +2,7 @@
     <div class="table-responsive">
         <table class="table table-striped table-bordered">
             <tr>
-                <td colspan="4"><span class="text-bold">URL Endpoint: </span><span class="endpoint-text">/api/game/info</span><span class="endpoint-text-options">?game={permalink}</span></td>
+                <td colspan="4"><span class="text-bold">URL Endpoint: </span><span class="endpoint-text">/api/game/info</span><span class="endpoint-text-options">?game={game-permalink}</span></td>
             </tr>
             <tr>
                 <td colspan="4">
@@ -21,7 +21,7 @@
 
     <div ng-if="vm.selectedGame">
         <h3 class="page-header">Example</h3>
-        <p><span class="text-bold">Endpoint: </span><span class="endpoint-text">/api/game/info</span><span class="endpoint-text-options">?game={{vm.selectedGame.permalink}}</span></p>
+        <p><span class="text-bold">Endpoint: </span><span class="endpoint-text">/api/game/info</span><span class="endpoint-text-options">?game={{vm.selectedGame.gamePermalink}}</span></p>
         <pre>{{ vm.gameInfo | json }}</pre>
     </div>
 </div>
