--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,34 +1,3 @@
-<div class="container">
-    <h1 class="page-header">XBA API's</h1>
-
-    <table class="table table-bordered table-striped">
-        <tr>
-            <td>
-                <span class="text-bold">API</span>
-            </td>
-            <td colspan="4">
-                <span class="text-bold">Description</span>
-            </td>
-        </tr>
-        <tr>
-            <td><a href="/latestnews">Latest News</a></td>
-            <td colspan="4" style="font-style: italic">Get Latest News</td>
-        </tr>
-        <tr>
-            <td><a href="/news">News</a></td>
-            <td colspan="4" style="font-style: italic">News Details</td>
-        </tr>
-        <tr>
-            <td><a href="/latestachievements">Latest Achievements</a></td>
-            <td colspan="4" style="font-style: italic">Get Latest Achievements</td>
-        </tr>
-        <tr>
-            <td><a href="/games">Games List</a></td>
-            <td colspan="4" style="font-style: italic">Get Game List</td>
-        </tr>
-        <tr>
-            <td><a href="/game">Game</a></td>
-            <td colspan="4" style="font-style: italic">Get Game Info</td>
-        </tr>
-    </table>
+<div>
+    
 </div>
