--- a/public/css/style.less
+++ b/public/css/style.less
@@ -6,31 +6,34 @@ body {
     color: #e74c3c;
   }
 
-  .endpoint-text {
-    font-weight: 500;
-    color: #0b97c4;
-  }
-
-  .endpoint-text-options {
-    font-weight: 600;
-    color: #e74c3c;
-  }
-
   .text-bold {
     font-weight: 700;
+  }
+  
+  .text-thin {
+    font-weight: 100;
   }
 
   .text-primary {
     color: #e74c3c;
   }
-
-  .tab-content {
-    border: 1px solid #ddd;
-    padding: 10px;
-    margin-bottom: 20px;
+  
+  .text-size-title {
+    font-size: 24px;
   }
-
-  .nav-tabs {
-    margin-bottom: -1px;
+  
+  .login-wrapper {
+    background-color: #f1f1f1;
+    padding: 40px;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate3d(-50%, 50%, 0);
+    max-width: 500px;
+    box-shadow: 0 0 2px rgba(0,0,0,.4);
+    
+    input.form-control {
+      margin-bottom: 10px;
+    }
   }
 }
