--- a/public/views/index.html
+++ b/public/views/index.html
@@ -34,12 +34,14 @@
 <!-- Scripts -->
 <script src="https://code.jquery.com/jquery-1.11.2.js"></script>
 <script src="/scripts/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="/scripts/angular/angular.min.js"></script>
+<script src="/scripts/angular/angular.js"></script>
 <script src="/scripts/angular-route/angular-route.min.js" type="text/javascript"></script>
 <script src="/scripts/angular-animate/angular-animate.min.js" type="text/javascript"></script>
 <script src="/scripts/angular-loading-bar/build/loading-bar.min.js"></script>
 <script src="/scripts/angular-ui-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <script src="/js/application.js"></script>
+<script src="/js/services/user-services.js"></script>
+<script src="/js/controllers/home-controller.js"></script>
 
 </body>
 </html>
