--- a/public/views/index.html
+++ b/public/views/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <script src="//www.parsecdn.com/js/parse-1.6.7.min.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,300,200italic,300italic,400italic,600,600italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
 
     <title>XBA API's</title>
@@ -40,8 +41,8 @@
 <script src="/scripts/angular-loading-bar/build/loading-bar.min.js"></script>
 <script src="/scripts/angular-ui-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <script src="/js/application.js"></script>
-<script src="/js/services/user-services.js"></script>
 <script src="/js/controllers/home-controller.js"></script>
+<script src="/js/controllers/dashboard-controller.js"></script>
 
 </body>
 </html>
