--- a/public/css/style.less
+++ b/public/css/style.less
@@ -1,3 +1,6 @@
+@import 'navbar';
+@import "global";
+
 body {
   font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
   
