--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,47 @@
+.navi {
+  background-color: #e74c3c;
+  color: white;
+  width: 100%;
+  height: 70px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  font-weight: 300;
+}
+.navi ul {
+  padding: 0;
+  text-align: right;
+}
+.navi ul li {
+  display: inline-block;
+  line-height: 70px;
+  padding: 0 20px;
+}
+.navi ul li a {
+  color: white;
+  font-size: 1.4em;
+}
+.navi ul li a:hover {
+  color: #cccccc;
+  text-decoration: none;
+}
+.achievement-wrapper {
+  position: relative;
+  margin-bottom: 20px;
+  font-weight: 300;
+}
+.achievement-wrapper img {
+  width: 100%;
+}
+.achievement-wrapper .gradient {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 10px;
+}
 body {
   font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
