--- a/public/views/index.html
+++ b/public/views/index.html
@@ -41,8 +41,11 @@
 <script src="/scripts/angular-loading-bar/build/loading-bar.min.js"></script>
 <script src="/scripts/angular-ui-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <script src="/js/application.js"></script>
+<script src="/js/services/xa-services.js"></script>
+<script src="/js/controllers/navbar-controller.js"></script>
 <script src="/js/controllers/home-controller.js"></script>
 <script src="/js/controllers/dashboard-controller.js"></script>
+<script src="/js/controllers/game-info-controller.js"></script>
 
 </body>
 </html>
