--- a/public/css/global.less
+++ b/public/css/global.less
@@ -1,5 +1,12 @@
 @import "variables";
 
+.container-bg {
+  background-color: white;
+  -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, .2);
+  -moz-box-shadow: 0 0 4px rgba(0, 0, 0, .2);
+  box-shadow: 0 0 4px rgba(0, 0, 0, .2);
+}
+
 .achievement-wrapper {
   position: relative;
   margin-bottom: 20px;
@@ -17,5 +24,34 @@
     right: 0;
     bottom: 0;
     padding: 10px;
+  }
+}
+
+.page-header {
+  font-weight: 300;
+  color: #e74c3c;
+}
+
+.text-bold {
+  font-weight: 700;
+}
+
+.text-thin {
+  font-weight: 100;
+}
+
+.text-primary {
+  color: #e74c3c;
+}
+
+.text-size-title {
+  font-size: 24px;
+}
+
+.login-wrapper {
+
+
+  input.form-control {
+    margin-bottom: 10px;
   }
 }
