--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,4 +1,4 @@
-<div class="container" ng-controller="HomeController as vm">
+<div class="container container-bg" ng-controller="HomeController as vm">
     <h1 class="text-center text-primary">XBA API's</h1>
     
     <div class="login-wrapper">
