--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,7 +10,7 @@
 }
 .navi ul {
   padding: 0;
-  text-align: right;
+  text-align: center;
 }
 .navi ul li {
   display: inline-block;
@@ -24,6 +24,12 @@
 .navi ul li a:hover {
   color: #cccccc;
   text-decoration: none;
+}
+.container-bg {
+  background-color: white;
+  -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
 }
 .achievement-wrapper {
   position: relative;
@@ -42,35 +48,26 @@
   bottom: 0;
   padding: 10px;
 }
-body {
-  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-body .page-header {
+.page-header {
   font-weight: 300;
   color: #e74c3c;
 }
-body .text-bold {
+.text-bold {
   font-weight: 700;
 }
-body .text-thin {
+.text-thin {
   font-weight: 100;
 }
-body .text-primary {
+.text-primary {
   color: #e74c3c;
 }
-body .text-size-title {
+.text-size-title {
   font-size: 24px;
 }
-body .login-wrapper {
-  background-color: #f1f1f1;
-  padding: 40px;
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate3d(-50%, 50%, 0);
-  max-width: 500px;
-  box-shadow: 0 0 2px rgba(0, 0, 0, 0.4);
-}
-body .login-wrapper input.form-control {
+.login-wrapper input.form-control {
   margin-bottom: 10px;
+}
+body {
+  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background-color: #fafafa;
 }
