--- a/public/css/style.less
+++ b/public/css/style.less
@@ -3,40 +3,5 @@
 
 body {
   font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  
-  .page-header {
-    font-weight: 300;
-    color: #e74c3c;
-  }
-
-  .text-bold {
-    font-weight: 700;
-  }
-  
-  .text-thin {
-    font-weight: 100;
-  }
-
-  .text-primary {
-    color: #e74c3c;
-  }
-  
-  .text-size-title {
-    font-size: 24px;
-  }
-  
-  .login-wrapper {
-    background-color: #f1f1f1;
-    padding: 40px;
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate3d(-50%, 50%, 0);
-    max-width: 500px;
-    box-shadow: 0 0 2px rgba(0,0,0,.4);
-    
-    input.form-control {
-      margin-bottom: 10px;
-    }
-  }
+  background-color: @body-bg;
 }
