--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -1,6 +1,6 @@
 <div ng-include="'/views/navbar.html'"></div>
 
-<div class="container" ng-controller="DashboardController as vm">
+<div class="container container-bg" ng-controller="DashboardController as vm">
     <h2 class="page-header">Latest Achievements - XBA</h2>
 
     <div class="row">
