--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -2,7 +2,7 @@
     <nav class="navi container">
         <ul>
             <li><a href="/dashboard">Dashboard</a></li>
-            <li><a href="">Browse</a></li>
+            <li><a href="/browse">Browse</a></li>
             <li><a href="" target="_self" ng-click="vm.logout()">Logout</a></li>
         </ul>
     </nav>
