--- a/public/css/global.less
+++ b/public/css/global.less
@@ -49,9 +49,17 @@
 }
 
 .login-wrapper {
-
-
   input.form-control {
     margin-bottom: 10px;
+  }
+}
+
+.browse-alphabetic {
+  padding: 0;
+  text-align: center;
+
+  li {
+    display: inline-block;
+    padding: 5px;
   }
 }
