--- a/public/views/index.html
+++ b/public/views/index.html
@@ -46,6 +46,7 @@
 <script src="/js/controllers/home-controller.js"></script>
 <script src="/js/controllers/dashboard-controller.js"></script>
 <script src="/js/controllers/game-info-controller.js"></script>
+<script src="/js/controllers/browse-controller.js"></script>
 
 </body>
 </html>
