--- a/public/views/game-info.html
+++ b/public/views/game-info.html
@@ -21,15 +21,37 @@
 
     <h2 class="page-header">Achievements</h2>
 
-    <div class="row">
-        <div class="col-md-4 col-sm-6" ng-repeat="ach in vm.achievements">
-            <div class="achievement-wrapper">
-                <img class="img-responsive" src="{{ach.imageUrl}}" alt="Cover">
-                <div class="gradient">
-                    <h4 class="media-heading" ng-bind="ach.title"></h4>
-                    <p ng-bind="ach.description"></p>
-                </div>
-            </div>
-        </div>
+    <div class="table-responsive">
+        <table class="table table-striped table-condensed">
+            <thead>
+            <tr>
+                <th>Image</th>
+                <th>Description</th>
+                <th>In Parse</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="ach in vm.achievements">
+                <td><img width="150px;" class="" src="{{ach.imageUrl}}"/></td>
+                <td>
+                    <span class="text-bold text-primary">{{ach.title}}</span><br/>
+                    <span>{{ach.description}}</span>
+                </td>
+                <td><input type="checkbox"/></td>
+            </tr>
+            </tbody>
+        </table>
     </div>
+
+    <!--<div class="row">-->
+        <!--<div class="col-md-4 col-sm-6" ng-repeat="ach in vm.achievements">-->
+            <!--<div class="achievement-wrapper">-->
+                <!--<img class="img-responsive" src="{{ach.imageUrl}}" alt="Cover">-->
+                <!--<div class="gradient">-->
+                    <!--<h4 class="media-heading" ng-bind="ach.title"></h4>-->
+                    <!--<p ng-bind="ach.description"></p>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
 </div>
