--- a/public/views/index.html
+++ b/public/views/index.html
@@ -42,6 +42,7 @@
 <script src="/scripts/angular-ui-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <script src="/js/application.js"></script>
 <script src="/js/services/xa-services.js"></script>
+<script src="/js/services/parse-services.js"></script>
 <script src="/js/controllers/navbar-controller.js"></script>
 <script src="/js/controllers/home-controller.js"></script>
 <script src="/js/controllers/dashboard-controller.js"></script>
