--- a/public/views/game-info.html
+++ b/public/views/game-info.html
@@ -18,11 +18,13 @@
             <span ng-bind="vm.achievements.length + ' achievements'"></span><br/>
             <span>Linked to Parse: </span>
             <span class="text-primary" ng-class="vm.inParse ? 'fa fa-link' : 'fa fa-chain-broken'"></span><br/>
-            <span><a href="" ng-click="vm.updateGameInfo(vm.gameInfo)">Upload to parse</a></span>
+            <span><a href="" ng-click="vm.addGameInfoToParse(vm.gameInfo)" ng-if="!vm.inParse">Add to Parse</a></span>
         </div>
     </div>
 
     <h2 class="page-header">Achievements</h2>
+    <a href="" target="_self" ng-click="vm.uploadAllAchievements()" ng-if="vm.inParse">Upload All Achievements</a>
+    <hr/>
 
     <div class="table-responsive">
         <table class="table table-striped table-condensed">
