--- a/public/views/game-info.html
+++ b/public/views/game-info.html
@@ -7,7 +7,7 @@
     <div class="media">
         <div class="media-left">
             <a target="_blank" href="{{vm.gameInfo.imageUrl}}">
-                <img class="media-object" src="{{vm.gameInfo.imageUrl}}"/>
+                <img class="media-object" src="{{vm.gameInfo.imageUrl}}" width="120px;"/>
             </a>
         </div>
         <div class="media-body">
